--- a/package.json
+++ b/package.json
@@ -7,11 +7,14 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "dependencies": {
     "bootstrap": "^5.3.3",
     "framer-motion": "^11.15.0",
+    "gh-pages": "^6.2.0",
     "hamburger-react": "^2.5.2",
     "react": "^18.3.1",
     "react-burger-menu": "^3.1.0",
@@ -32,5 +35,6 @@
     "globals": "^15.14.0",
     "vite": "^6.0.5"
   },
+  "homepage": "https://roscarobb21.github.io/movmemories.github.io/",
   "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e"
 }
