--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
   },
   "dependencies": {
     "bootstrap": "^5.3.3",
+    "firebase": "^11.1.0",
     "framer-motion": "^11.15.0",
     "gh-pages": "^6.2.0",
     "hamburger-react": "^2.5.2",
+    "lodash.debounce": "^4.0.8",
     "react": "^18.3.1",
     "react-burger-menu": "^3.1.0",
     "react-dom": "^18.3.1",
