--- a/package.json
+++ b/package.json
@@ -15,12 +15,13 @@
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
+    "@mui/icons-material": "^6.3.1",
     "@mui/material": "^6.3.1",
     "@mui/x-date-pickers": "^7.23.3",
     "bootstrap": "^5.3.3",
     "dayjs": "^1.11.13",
     "firebase": "^11.1.0",
-    "framer-motion": "^11.15.0",
+    "framer-motion": "^11.16.4",
     "gh-pages": "^6.2.0",
     "hamburger-react": "^2.5.2",
     "lodash.debounce": "^4.0.8",
