--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-dom": "^18.3.1",
     "react-router": "^7.1.1",
     "react-router-dom": "^7.1.1",
+    "react-window": "^1.8.11",
     "reactstrap": "^9.2.3",
     "yarn": "^1.22.22"
   },
