--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@mui/icons-material": "^6.3.1",
     "@mui/material": "^6.3.1",
     "@mui/x-date-pickers": "^7.23.3",
+    "@toolpad/core": "^0.12.0",
     "bootstrap": "^5.3.3",
     "dayjs": "^1.11.13",
     "firebase": "^11.1.0",
@@ -28,6 +29,7 @@
     "react": "^18.3.1",
     "react-burger-menu": "^3.1.0",
     "react-dom": "^18.3.1",
+    "react-firebase-hooks": "^5.1.1",
     "react-router": "^7.1.1",
     "react-router-dom": "^7.1.1",
     "react-window": "^1.8.11",
